<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mainFragment"
    android:id="@+id/mainFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/text_main_vehicleName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="3sp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAlignment="center"/>
        <TextView
            android:id="@+id/text_averageConsumptionInMain"
            android:layout_below="@+id/text_main_vehicleName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="Average consumption: 99.9l/100km"/>
        <TextView
            android:id="@+id/text_averagePriceInMain"
            android:layout_below="@+id/text_averageConsumptionInMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="Average price per km: 99.99eur"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="75sp"
        android:layout_marginBottom="50sp">

        <TextView
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:text="@string/Main_liters_textView"
            android:textSize="18sp"
            android:textAllCaps="true"
            android:layout_marginStart="15sp"
            android:layout_marginTop="24sp"/>

        <EditText
            android:id="@+id/textEdit_liters"
            android:layout_width="150sp"
            android:layout_height="50sp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="15sp"
            android:hint="@string/Main_liters_editText_hint"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:text="@string/Main_price_textView"
            android:textSize="18sp"
            android:textAllCaps="true"
            android:layout_marginStart="15sp"
            android:layout_marginTop="83sp"/>

        <EditText
            android:id="@+id/textEdit_price"
            android:layout_below="@+id/textEdit_liters"
            android:layout_width="150sp"
            android:layout_height="50sp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="15sp"
            android:hint="@string/Main_price_editText_hint"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:text="@string/Main_odometer_textView"
            android:textSize="18sp"
            android:textAllCaps="true"
            android:layout_marginStart="15sp"
            android:layout_marginTop="130sp"/>

        <EditText
            android:id="@+id/textEdit_kilometers"
            android:layout_below="@+id/textEdit_price"
            android:layout_width="150sp"
            android:layout_height="50sp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="15sp"
            android:hint="@string/Main_odometer_editText_hint"
            android:inputType="number"
            android:textAlignment="center"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:text="@string/Main_date_textView"
            android:textSize="18sp"
            android:textAllCaps="true"
            android:layout_marginStart="15sp"
            android:layout_marginTop="203sp"/>

        <EditText
            android:id="@+id/textEdit_date"
            android:layout_below="@+id/textEdit_kilometers"
            android:layout_width="150sp"
            android:layout_height="50sp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="15sp"
            android:hint="@string/Main_date_editText_hint"
            android:inputType="date"
            android:textAlignment="center"
            android:textSize="18sp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <Button
            android:id="@+id/button_settingsFragment"
            android:layout_width="115sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            android:layout_alignParentStart="true"
            android:text="@string/Main_button_settings" />

        <Button
            android:id="@+id/button_statisticsFragment"
            android:layout_width="115sp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/Main_button_statistics" />

        <Button
            android:id="@+id/button_addToDataBase"
            android:layout_width="115sp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5sp"
            android:layout_alignParentEnd="true"
            android:text="@string/Main_button_addToDatabase" />
    </RelativeLayout>

</FrameLayout>