<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mainFragment"
    android:id="@+id/mainFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/button_auto1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            />

        <Button
            android:id="@+id/button_auto2"
            android:layout_below="@+id/button_auto1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
           />

        <Button
            android:id="@+id/button_auto3"
            android:layout_below="@+id/button_auto2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
           />

        <TextView
            android:id="@+id/text_buttonRename"
            android:layout_below="@+id/button_auto3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="30sp"
            android:textAlignment="center"
            android:text="@string/Settings_button_rename_explanation_text"/>
        <RelativeLayout
            android:visibility="gone"
            android:id="@+id/vehicleRenamingLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/text_buttonRename">

            <EditText
                android:id="@+id/editText_renameAuto"
                android:layout_width="match_parent"
                android:layout_height="100sp"
                android:hint="@string/Settings_rename_editText_hint"
                android:textAlignment="center"/>

            <Button
                android:id="@+id/button_renameAuto"
                android:layout_below="@+id/editText_renameAuto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/Settings_rename_button_text"/>
        </RelativeLayout>
    </RelativeLayout>




</FrameLayout>